--- a/appvaccine/src/main/resources/application.properties
+++ b/appvaccine/src/main/resources/application.properties
@@ -1,6 +1,12 @@
+
+# k?t n?i sql
 spring.datasource.url=jdbc:mysql://localhost:3306/db_vaccine
 spring.datasource.username=root
 spring.datasource.password=Truong2001@
+
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
+
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 
