nguyentruong272001@gmail.com

--- a/appvaccine/src/main/resources/application.properties
+++ b/appvaccine/src/main/resources/application.properties
@@ -7,6 +7,11 @@ spring.datasource.password=Truong2001@
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
 
+twilio.AccountSID=ACe0c6a20462086c39b1969ab95bc8f20e
+twilio.AuthToken=8603929dd14873796d0e15c5eb3a73d4
+twilio.phoneNumber=+12017201808
+imgur.client.id=b1dc1556f38ec3f
+
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 
